fixed visibility issue with document page and contact label to documents

--- a/src/pages/fraternities/fraternities.scss
+++ b/src/pages/fraternities/fraternities.scss
@@ -22,7 +22,7 @@ width: 100%;
 
 .list {
 	margin: auto;
-	height: 525px;
+	height: 526px;
 	width:100%;
 }
 
